[gd_scene load_steps=20 format=3 uid="uid://deh5mgewlsku3"]

[ext_resource type="Script" uid="uid://dqlnrfaxvypc" path="res://Script/game_over.gd" id="1_6748t"]
[ext_resource type="Texture2D" uid="uid://dh6ixhb81tmnm" path="res://Assets/images/button_round_depth_gradient.png" id="2_pdaxk"]
[ext_resource type="FontFile" uid="uid://c6reqbpdnikfh" path="res://Assets/Fonts/Pixel Game.otf" id="2_qf1nx"]
[ext_resource type="Texture2D" uid="uid://cfdbevoxcl0hj" path="res://Assets/images/Circle.png" id="3_s46eg"]
[ext_resource type="Texture2D" uid="uid://ddq03hdlmhi45" path="res://Assets/images/ButtonText_OnOffButton.png" id="4_gkxye"]
[ext_resource type="Texture2D" uid="uid://bd06aulcvmb1t" path="res://Assets/images/ButtonText_Small_GreyOutline_Round.png" id="5_vv2qi"]
[ext_resource type="Texture2D" uid="uid://droyp2di7jcmp" path="res://Assets/Atlas/key.png" id="6_up0eu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qh4nc"]
bg_color = Color(0.75626236, 0.5620364, 0.1389505, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3p3j6"]
bg_color = Color(0.004019165, 0.004019165, 0.004019165, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t757r"]
bg_color = Color(0.004019165, 0.004019165, 0.004019165, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qf1nx"]
bg_color = Color(0.004019165, 0.004019165, 0.004019165, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_up0eu"]
bg_color = Color(0.004019165, 0.004019165, 0.004019165, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6ly0m"]
bg_color = Color(0.004019165, 0.004019165, 0.004019165, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vw1tr"]
bg_color = Color(0.004019165, 0.004019165, 0.004019165, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_53g77"]
bg_color = Color(0.004019165, 0.004019165, 0.004019165, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6oh06"]
bg_color = Color(0.004019165, 0.004019165, 0.004019165, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bf4nu"]
bg_color = Color(0.004019165, 0.004019165, 0.004019165, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0xapb"]
bg_color = Color(0.004019165, 0.004019165, 0.004019165, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q63yo"]
bg_color = Color(0.004019165, 0.004019165, 0.004019165, 0)

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_6748t")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.07450981, 0.07450981, 0.07450981, 0.7607843)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 135
theme_override_fonts/font = ExtResource("2_qf1nx")
theme_override_font_sizes/font_size = 100
text = "Keep Climbing?
"

[node name="MarginContainer" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ProgressBar" type="TextureProgressBar" parent="VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
value = 85.0
rounded = true
fill_mode = 4
texture_under = ExtResource("2_pdaxk")
texture_progress = ExtResource("3_s46eg")
tint_under = Color(0.012617188, 0.012617188, 0.012617188, 0)

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer"]
visible = false
layout_mode = 2
texture = ExtResource("4_gkxye")

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.43868086, 0, 0.20283198, 1)
theme_override_constants/outline_size = 70
theme_override_constants/shadow_outline_size = -1
theme_override_font_sizes/font_size = 100
text = "You Will Lose"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="KeyPress" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("6_up0eu")
ignore_texture_size = true
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="WordPress" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.74575746, 0.5200123, 0.0992965, 1)
theme_override_fonts/font = ExtResource("2_qf1nx")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_qh4nc")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_qh4nc")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qh4nc")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_qh4nc")
theme_override_styles/hover = SubResource("StyleBoxFlat_qh4nc")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_qh4nc")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_qh4nc")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_qh4nc")
theme_override_styles/disabled = SubResource("StyleBoxFlat_qh4nc")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_qh4nc")
theme_override_styles/focus = SubResource("StyleBoxFlat_qh4nc")
text = "Revive with your key"
flat = true
autowrap_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 130
theme_override_constants/margin_bottom = 100

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/MarginContainer2/HBoxContainer/CenterContainer"]
layout_mode = 2
texture_normal = ExtResource("5_vv2qi")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer2/HBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 119

[node name="Label" type="Label" parent="VBoxContainer/MarginContainer2/HBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Add 10s"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/MarginContainer2/HBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(-0.375, 0)
layout_mode = 2
texture = ExtResource("3_s46eg")
expand_mode = 3

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8745098, 0.8745098, 0.8745098, 0)
flat = true

[node name="NoThanks" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qf1nx")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_3p3j6")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_t757r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qf1nx")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_up0eu")
theme_override_styles/hover = SubResource("StyleBoxFlat_6ly0m")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_vw1tr")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_53g77")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_6oh06")
theme_override_styles/disabled = SubResource("StyleBoxFlat_bf4nu")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_0xapb")
theme_override_styles/focus = SubResource("StyleBoxFlat_q63yo")
text = "NO THANKS"
flat = true
autowrap_mode = 2

[connection signal="pressed" from="VBoxContainer/KeyPress" to="." method="_on_key_press_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/WordPress" to="." method="_on_word_press_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/NoThanks" to="." method="_on_no_thanks_pressed"]
